external-crates/move/crates/move-compiler/tests/move_check/parser/cast_other_types.move
module a::m {
    fun t() {
        // we only parse type names
        (0 as ());
    }
}
